Fix Buzz Cafe Bar image clipping

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -451,7 +451,7 @@ form textarea {
 .slide:nth-of-type(1) {
   background: url("../images/nathan-dumlao-vbt-Fp3b5FA-unsplash.jpg");
   background-repeat: no-repeat;
-  background-size: cover%;
+  background-size: cover;
 }
 
 .slide:nth-of-type(2) {
